--- a/shipmanagement/pom.xml
+++ b/shipmanagement/pom.xml
@@ -32,6 +32,10 @@
 		<spring-cloud.version>2023.0.3</spring-cloud.version>
 	</properties>
 		<dependencies>
+  <dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-security</artifactId>
+</dependency>
 
 		<dependency>
 			<groupId>com.zapcom</groupId>
